[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Start.gd" type="Script" id=1]

[node name="Start" type="Control"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 149.0
margin_top = 64.0
margin_right = 217.0
margin_bottom = 101.0

[node name="Tween" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 164.0
margin_top = 75.0
margin_right = 204.0
margin_bottom = 89.0
text = "START"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
